--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Almudena Mirones Riotte</title>
+    <title>Almudena Mirones Riotte | Coming Soon</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-    <h1 class="fade-text">Almudena Mirones Riotte</h1>
-    <p class="fade-text delay1">Filmmaker & Visual Storyteller</p>
-    <p class="fade-text delay2">Coming Soon...</p>
+<canvas id="bgCanvas"></canvas>
+
+<div class="overlay">
+    <h1 class="title">Almudena Mirones Riotte</h1>
+    <p class="subtitle">Filmmaker & Visual Storyteller</p>
+    <p class="coming-soon">Coming Soon...</p>
 </div>
 
 <script src="script.js"></script>
