--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Almudena Mirones Riotte | Coming Soon</title>
+    <title>Almudena</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/icons/favicon2.ico" type="image/x-icon">
     <link rel="icon" href="/icons/favicon.ico" type="image/x-icon">
