--- a/viewfinder.html
+++ b/viewfinder.html
@@ -48,7 +48,7 @@
 <!--    <div class="counter"><div class="content">123/999</div></div>-->
     <div class="format"><div class="content">RAW+JPG</div></div>
     <div class="focus-grid">
-        <div class="cnt"><b>+</b></div>
+<!--        <div class="cnt"><b>[    ]</b></div>-->
         <div class="grid-lines"></div>
     </div>
     <div class="gallery"><i class="fas fa-images"></i></div>
