fixes camera model

--- a/viewfinder.html
+++ b/viewfinder.html
@@ -19,7 +19,7 @@
 <!-- Fuji camera body container -->
 <div class="camera-shell">
     <!-- Fuji back image (LCD cutout transparent) -->
-    <img src="models/fuji_x100_last.png" alt="Fuji Camera Back" class="camera-body">
+    <img src="models/XM5-black-final.png" alt="Fuji Camera Back" class="camera-body">
     <!-- LCD screen area -->
     <div class="screen-area">
         <!-- 16:9 simulated camera display -->
