Camera updated PS model

--- a/viewfinder.html
+++ b/viewfinder.html
@@ -11,7 +11,7 @@
 <body>
 <!-- Fuji camera body container -->
 <div class="camera-shell">
-    <img src="models/XM5-black-final.png" alt="Fuji Camera Back" class="camera-body" />
+    <img src="models/XM5-black-final-PS4.png" alt="Fuji Camera Back" class="camera-body" />
     <div class="screen-area">
         <div class="ratio_16x9">
             <video autoplay muted loop id="bg-video">
