--- a/viewfinder.html
+++ b/viewfinder.html
@@ -13,11 +13,17 @@
 <div class="camera-shell">
     <img src="models/XM5-black-final-PS6.png" alt="Fuji Camera Back" class="camera-body" />
     <!-- Placeholder round buttons -->
+<!--    <div class="camera-buttons">-->
+<!--        <div class="cam-btn btn-circle"></div>-->
+<!--        <div class="cam-btn btn-top"></div>-->
+<!--        <div class="cam-btn btn-middle"></div>-->
+<!--        <div class="cam-btn btn-bottom"></div>-->
+<!--    </div>-->
     <div class="camera-buttons">
-        <div class="cam-btn btn-circle"></div>
-        <div class="cam-btn btn-top"></div>
-        <div class="cam-btn btn-middle"></div>
-        <div class="cam-btn btn-bottom"></div>
+        <img src="UI/button1.png" alt="Weird Button" class="cam-btn btn-weird" />
+        <img src="UI/button2.png" alt="Top Button" class="cam-btn btn-top" />
+        <img src="UI/button3.png" alt="Middle Button" class="cam-btn btn-middle" />
+        <img src="UI/button4.png" alt="Bottom Button" class="cam-btn btn-bottom" />
     </div>
     <div class="screen-area">
         <div class="ratio_16x9">
