--- a/menus/menu4.html
+++ b/menus/menu4.html
@@ -8,38 +8,24 @@
 </head>
 <body>
 <div class="gallery-screen">
+    <!-- Dynamic title above grid -->
+    <div class="gallery-title"></div>
+
     <div class="gallery-grid">
-        <!-- 16 cells -->
-        <div class="gallery-cell"><img src="images/photo1.jpg" alt="Photo 1"></div>
-        <div class="gallery-cell"><img src="images/photo2.jpg" alt="Photo 2"></div>
-        <div class="gallery-cell"><img src="images/photo3.jpg" alt="Photo 3"></div>
-        <div class="gallery-cell"><img src="images/photo4.jpg" alt="Photo 4"></div>
-
-        <div class="gallery-cell"><img src="images/photo5.jpg" alt="Photo 5"></div>
-        <div class="gallery-cell"><img src="images/photo6.jpg" alt="Photo 6"></div>
-        <div class="gallery-cell"><img src="images/photo7.jpg" alt="Photo 7"></div>
-        <div class="gallery-cell"><img src="images/photo8.jpg" alt="Photo 8"></div>
-
-        <div class="gallery-cell"><img src="images/photo9.jpg" alt="Photo 9"></div>
-        <div class="gallery-cell"><img src="images/photo10.jpg" alt="Photo 10"></div>
-        <div class="gallery-cell"><img src="images/photo11.jpg" alt="Photo 11"></div>
-        <div class="gallery-cell"><img src="images/photo12.jpg" alt="Photo 12"></div>
-
-        <div class="gallery-cell"><img src="images/photo13.jpg" alt="Photo 13"></div>
-        <div class="gallery-cell"><img src="images/photo14.jpg" alt="Photo 14"></div>
-        <div class="gallery-cell"><img src="images/photo15.jpg" alt="Photo 15"></div>
-        <div class="gallery-cell"><!-- Empty cell example --></div>
+        <div class="gallery-cell"><img src="../previews/preview1.JPG" alt="Title Test 1"></div>
+        <div class="gallery-cell"><img src="../previews/preview2.JPG" alt="Title Test 2"></div>
+        <div class="gallery-cell"><img src="../previews/preview4.JPG" alt="Title Test 3"></div>
+        <div class="gallery-cell"><img src="../previews/photo.JPG" alt="Photo 4"></div>
+        <div class="gallery-cell"><img src="../previews/photo1.jpg" alt="Photo 5"></div>
+        <div class="gallery-cell"><img src="../previews/photo1.jpg" alt="Photo 6"></div>
+        <div class="gallery-cell"><img src="../previews/photo1.jpg" alt="Photo 7"></div>
+        <div class="gallery-cell"><img src="../previews/photo1.jpg" alt="Photo 8"></div>
+        <div class="gallery-cell"><img src="../previews/photo1.jpg" alt="Photo 9"></div>
     </div>
 </div>
 
-<script>
-    const cells = document.querySelectorAll('.gallery-cell');
-    cells.forEach(cell => {
-        cell.addEventListener('click', () => {
-            cells.forEach(c => c.classList.remove('selected'));
-            cell.classList.add('selected');
-        });
-    });
-</script>
+
+
+
 </body>
 </html>
