--- a/viewfinder.html
+++ b/viewfinder.html
@@ -36,27 +36,27 @@
                 <div class="loading-text">Initializing Camera...</div>
             </div>
 
-            <!-- HUD -->
-            <div class="rec"><div class="content">Rec <b>&#x2022;</b></div></div>
-            <div class="bat"><div class="content"><i class="fas fa-battery-full"></i></div></div>
-            <div class="wifi"><div class="content"><i class="fas fa-wifi"></i></div></div>
+            <div class="hud-container">
+                <div class="rec"><div class="content">Rec <b>&#x2022;</b></div></div>
+                <div class="bat"><div class="content"><i class="fas fa-battery-full"></i></div></div>
+                <div class="wifi"><div class="content"><i class="fas fa-wifi"></i></div></div>
 
-            <div class="mode"><div class="content">Shooting: A</div></div>
-            <div class="focus"><div class="content">AF-S</div></div>
-            <div class="drive"><div class="content">DRIVE: 1/3</div></div>
+                <div class="mode"><div class="content">Shooting: A</div></div>
+                <div class="focus"><div class="content">AF-S</div></div>
+                <div class="drive"><div class="content">DRIVE: 1/3</div></div>
 
-            <div class="settings">
-                <div class="shutter">1/125</div>
-                <div class="aperture">f/2.8</div>
-                <div class="iso">ISO 400</div>
+                <div class="settings">
+                    <div class="shutter">1/125</div>
+                    <div class="aperture">f/2.8</div>
+                    <div class="iso">ISO 400</div>
+                </div>
+
+                <div class="format"><div class="content">RAW+JPG</div></div>
+
+                <div class="focus-grid"><div class="grid-lines"></div></div>
+
+                <div class="histogram"><canvas id="histogram" width="200" height="80"></canvas></div>
             </div>
-
-            <div class="format"><div class="content">RAW+JPG</div></div>
-
-            <div class="focus-grid"><div class="grid-lines"></div></div>
-
-            <div class="histogram"><canvas id="histogram" width="200" height="80"></canvas></div>
-
             <div class="menu-container"></div>
 
         </div> </div>
@@ -72,12 +72,17 @@
 
     // --- ⬇️ MODIFICATIONS HERE ⬇️ ---
     const menuContainer = document.querySelector('.menu-container'); // Get the new container
+    const hudContainer = document.querySelector('.hud-container');
 
-    // Fade-in after 3s and start video/histogram
+    // Fade-in after 3s
     setTimeout(() => {
         loadingScreen.style.transition = 'opacity 0.5s';
         loadingScreen.style.opacity = 0;
         setTimeout(() => loadingScreen.style.display = 'none', 500);
+
+        video.style.display = 'block'; // Show video
+        hudContainer.style.display = 'block'; // ⬅️ SHOW THE HUD
+
         video.play();
         updateHistogram();
     }, 3000);
@@ -115,11 +120,41 @@
             .then(html => {
                 menuContainer.innerHTML = html; // Load into .menu-container
                 menuContainer.style.display = 'block'; // Show the container
+                // 3. Find the new elements we just loaded
+                const galleryTitle = menuContainer.querySelector('.gallery-title');
+                const cells = menuContainer.querySelectorAll('.gallery-cell');
+
+                // 4. Check if we're on the gallery page (by seeing if those elements exist)
+                if (galleryTitle && cells.length > 0) {
+
+                    // 5. Run the script logic you wrote before
+                    cells.forEach(cell => {
+                        const img = cell.querySelector('img');
+
+                        if (img) {
+                            // Hover updates the title
+                            cell.addEventListener('mouseenter', () => {
+                                galleryTitle.textContent = img.alt;
+                            });
+
+                            cell.addEventListener('mouseleave', () => {
+                                galleryTitle.textContent = '';
+                            });
+
+                            // Click selects the cell
+                            cell.addEventListener('click', () => {
+                                cells.forEach(c => c.classList.remove('selected'));
+                                cell.classList.add('selected');
+                            });
+                        }
+                    });
+                }
+                // --- ⬆️ END OF NEW LOGIC ⬆️ ---
             })
             .catch(err => console.error('Error loading menu:', err));
     }
 
-    // --- NEW FUNCTION ---
+
     // This function hides the menu and shows the viewfinder
     function hideMenu() {
         menuContainer.innerHTML = ''; // Empty the container
@@ -132,6 +167,8 @@
     document.querySelector('.btn-top').addEventListener('click', () => loadMenu('menus/menu2.html'));
     document.querySelector('.btn-middle').addEventListener('click', () => loadMenu('menus/menu4.html'));
     document.querySelector('.btn-weird').addEventListener('click', () => loadMenu('menus/menu3.html'));
+
+
 
 </script>
 </body>
