Added new camera Design Screen behind camera All working

--- a/viewfinder.html
+++ b/viewfinder.html
@@ -11,7 +11,7 @@
 <body>
 <!-- Fuji camera body container -->
 <div class="camera-shell">
-    <img src="models/XM5-black-final-PS6.png" alt="Fuji Camera Back" class="camera-body" />
+    <img src="models/best1_cut.png" alt="Fuji Camera Back" class="camera-body" />
     <!-- Placeholder round buttons -->
     <div class="camera-buttons">
         <img src="UI/button1.png" alt="Weird Button" class="cam-btn btn-weird" />
