--- a/viewfinder.html
+++ b/viewfinder.html
@@ -61,7 +61,6 @@
 
         </div> </div>
 </div>
-
 <script>
     const loadingScreen = document.querySelector('.loading-screen');
     const video = document.getElementById('bg-video');
@@ -113,43 +112,81 @@
         requestAnimationFrame(updateHistogram);
     }
 
-    // This function now loads content into the new container
+    // This function now loads content AND wires up the gallery logic
     function loadMenu(file) {
         fetch(file)
             .then(response => response.text())
             .then(html => {
                 menuContainer.innerHTML = html; // Load into .menu-container
                 menuContainer.style.display = 'block'; // Show the container
-                // 3. Find the new elements we just loaded
+
+                // --- ⭐ NEW GALLERY LOGIC STARTS HERE ⭐ ---
+
+                // 1. Find all the elements WE JUST LOADED
                 const galleryTitle = menuContainer.querySelector('.gallery-title');
                 const cells = menuContainer.querySelectorAll('.gallery-cell');
+                const detailsScreen = menuContainer.querySelector('.details-screen');
+                const galleryGrid = menuContainer.querySelector('.gallery-grid');
 
-                // 4. Check if we're on the gallery page (by seeing if those elements exist)
-                if (galleryTitle && cells.length > 0) {
+                // Find the back button by its ID
+                const backButton = menuContainer.querySelector('#gallery-back-button');
 
-                    // 5. Run the script logic you wrote before
+                // 2. Check if we're on the gallery page (and all elements were found)
+                if (galleryTitle && cells.length > 0 && detailsScreen && backButton && galleryGrid) {
+
+                    // 3. Define the functions to show/hide details
+                    function showDetails(cell) {
+                        // Get data from the clicked cell's data-* attributes
+                        const data = cell.dataset;
+
+                        // Populate the details screen
+                        detailsScreen.querySelector('.details-image img').src = data.src || '';
+                        detailsScreen.querySelector('.details-image img').alt = data.title || 'Media';
+                        detailsScreen.querySelector('.details-title').textContent = data.title || 'No Title';
+                        detailsScreen.querySelector('.details-description').textContent = data.description || 'No description available.';
+                        detailsScreen.querySelector('.details-director').textContent = data.director || 'N/A';
+                        detailsScreen.querySelector('.details-actor').textContent = data.actor || 'N/A';
+                        detailsScreen.querySelector('.details-year').textContent = data.year || 'N/A';
+                        detailsScreen.querySelector('.details-runtime').textContent = data.runtime || 'N/A';
+
+                        // Hide the grid and show the details
+                        galleryGrid.style.display = 'none';
+                        galleryTitle.style.display = 'none'; // Hide title too
+                        detailsScreen.classList.add('active');
+                    }
+
+                    function hideDetails() {
+                        detailsScreen.classList.remove('active'); // Hide details
+                        galleryGrid.style.display = 'grid'; // Restore grid
+                        galleryTitle.style.display = 'block'; // Restore title
+                    }
+
+                    // 4. Add all event listeners
                     cells.forEach(cell => {
                         const img = cell.querySelector('img');
-
                         if (img) {
                             // Hover updates the title
                             cell.addEventListener('mouseenter', () => {
-                                galleryTitle.textContent = img.alt;
+                                if(galleryTitle) galleryTitle.textContent = img.alt;
                             });
-
                             cell.addEventListener('mouseleave', () => {
-                                galleryTitle.textContent = '';
+                                if(galleryTitle) galleryTitle.textContent = ''; // Or 'My Media'
                             });
 
-                            // Click selects the cell
+                            // CLICKING a cell now shows the details
                             cell.addEventListener('click', () => {
-                                cells.forEach(c => c.classList.remove('selected'));
-                                cell.classList.add('selected');
+                                showDetails(cell);
                             });
                         }
                     });
+
+                    // CLICKING the "Back" button hides the details
+                    backButton.addEventListener('click', () => {
+                        hideDetails();
+                    });
                 }
-                // --- ⬆️ END OF NEW LOGIC ⬆️ ---
+                // --- ⭐ NEW GALLERY LOGIC ENDS HERE ⭐ ---
+
             })
             .catch(err => console.error('Error loading menu:', err));
     }
@@ -167,8 +204,6 @@
     document.querySelector('.btn-top').addEventListener('click', () => loadMenu('menus/menu2.html'));
     document.querySelector('.btn-middle').addEventListener('click', () => loadMenu('menus/menu4.html'));
     document.querySelector('.btn-weird').addEventListener('click', () => loadMenu('menus/menu3.html'));
-
-
 
 </script>
 </body>
