new details menu design Everything working

--- a/viewfinder.html
+++ b/viewfinder.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<!-- Fuji camera body container -->
+<!-- Fuji camera body containers -->
 <div class="camera-shell">
     <img src="models/best1_cut.png" alt="Fuji Camera Back" class="camera-body" />
     <!-- Placeholder round buttons -->
